{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 16,
  "lineage": "838cbc46-860b-94d0-ec87-3d533cdd70ea",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_service_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "infra-euw3",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/project-custom-01/regions/europe-west3/instanceGroups/customer-app-managed-instance-group-public",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-11-18T09:18:34.030-08:00",
            "enable_cdn": false,
            "fingerprint": "hV2emYdKy10=",
            "generated_id": 902177550293714949,
            "health_checks": [
              "projects/project-custom-01/global/healthChecks/customer-app-load-balancer-hc-public"
            ],
            "id": "projects/project-custom-01/global/backendServices/customer-app-load-balancer-backend-public",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "customer-app-load-balancer-backend-public",
            "port_name": "customer-app-port",
            "project": "project-custom-01",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-custom-01/global/backendServices/customer-app-load-balancer-backend-public",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "data.google_compute_default_service_account.default",
            "google_compute_health_check.health_check_public",
            "google_compute_instance_template.inst_template_public",
            "google_compute_network.vpc_network",
            "google_compute_region_instance_group_manager.mig_public",
            "google_compute_subnetwork.subnetwork_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_on_8080_from_load_balancer_ip_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-18T06:09:13.339-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-custom-01/global/firewalls/allow-on-8080-from-load-balancer-ip-range",
            "log_config": [],
            "name": "allow-on-8080-from-load-balancer-ip-range",
            "network": "https://www.googleapis.com/compute/v1/projects/project-custom-01/global/networks/customer-vpc-network",
            "priority": 1000,
            "project": "project-custom-01",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-custom-01/global/firewalls/allow-on-8080-from-load-balancer-ip-range",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "customer-app-server-public"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.external.env",
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh_from_iap_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-18T06:09:13.703-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-custom-01/global/firewalls/allow-ingress-from-iap",
            "log_config": [],
            "name": "allow-ingress-from-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/project-custom-01/global/networks/customer-vpc-network",
            "priority": 1000,
            "project": "project-custom-01",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-custom-01/global/firewalls/allow-ingress-from-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.external.env",
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "forwarding_rule_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "infra-euw3",
          "schema_version": 0,
          "attributes": {
            "id": "projects/project-custom-01/global/forwardingRules/customer-app-load-balancer-front-end-public",
            "ip_address": "34.111.93.135",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "customer-app-load-balancer-front-end-public",
            "port_range": "80-80",
            "project": "project-custom-01",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-custom-01/global/forwardingRules/customer-app-load-balancer-front-end-public",
            "target": "https://www.googleapis.com/compute/v1/projects/project-custom-01/global/targetHttpProxies/customer-app-load-balancer-proxy-public"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default",
            "google_compute_backend_service.backend_service_public",
            "google_compute_health_check.health_check_public",
            "google_compute_instance_template.inst_template_public",
            "google_compute_network.vpc_network",
            "google_compute_region_instance_group_manager.mig_public",
            "google_compute_subnetwork.subnetwork_1",
            "google_compute_target_http_proxy.target_http_proxy_public",
            "google_compute_url_map.compute_url_map_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-custom-01/global/networks/customer-vpc-network",
            "mtu": 1460,
            "name": "customer-vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8900138204340352146",
            "project": "project-custom-01",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-custom-01/global/networks/customer-vpc-network"
          },
          "dependencies": [
            "data.external.env"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "infra-euw3",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-18T09:17:36.966-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/project-custom-01/regions/europe-west3/subnetworks/customer-vpc-sub-network-1",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "customer-vpc-sub-network-1",
            "network": "https://www.googleapis.com/compute/v1/projects/project-custom-01/global/networks/customer-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-custom-01",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-custom-01/regions/europe-west3/subnetworks/customer-vpc-sub-network-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "infra-euw3",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-18T09:17:34.467-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/project-custom-01/regions/europe-west3/subnetworks/customer-vpc-sub-network-2",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "customer-vpc-sub-network-2",
            "network": "https://www.googleapis.com/compute/v1/projects/project-custom-01/global/networks/customer-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-custom-01",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-custom-01/regions/europe-west3/subnetworks/customer-vpc-sub-network-2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "target_http_proxy_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "infra-euw3",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-18T09:19:29.257-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/project-custom-01/global/targetHttpProxies/customer-app-load-balancer-proxy-public",
            "name": "customer-app-load-balancer-proxy-public",
            "project": "project-custom-01",
            "proxy_bind": false,
            "proxy_id": 5358585176527391182,
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-custom-01/global/targetHttpProxies/customer-app-load-balancer-proxy-public",
            "url_map": "https://www.googleapis.com/compute/v1/projects/project-custom-01/global/urlMaps/customer-app-load-balancer-public"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default",
            "google_compute_backend_service.backend_service_public",
            "google_compute_health_check.health_check_public",
            "google_compute_instance_template.inst_template_public",
            "google_compute_network.vpc_network",
            "google_compute_region_instance_group_manager.mig_public",
            "google_compute_subnetwork.subnetwork_1",
            "google_compute_url_map.compute_url_map_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "compute_url_map_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "infra-euw3",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-18T09:19:17.824-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/project-custom-01/global/backendServices/customer-app-load-balancer-backend-public",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "7vclK4U7R-s=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/project-custom-01/global/urlMaps/customer-app-load-balancer-public",
            "map_id": 8630809030070553082,
            "name": "customer-app-load-balancer-public",
            "path_matcher": [],
            "project": "project-custom-01",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-custom-01/global/urlMaps/customer-app-load-balancer-public",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_default_service_account.default",
            "google_compute_backend_service.backend_service_public",
            "google_compute_health_check.health_check_public",
            "google_compute_instance_template.inst_template_public",
            "google_compute_network.vpc_network",
            "google_compute_region_instance_group_manager.mig_public",
            "google_compute_subnetwork.subnetwork_1"
          ]
        }
      ]
    }
  ]
}